--- a/style.css
+++ b/style.css
@@ -1,10 +1,14 @@
 .main{
     width: 1350px;
     height: 640px;
-    background-color: blueviolet;
+    background-color:rebeccapurple;
     display: flex;
     align-items: center;
     justify-content: center;
+    transition: 4s ease-in-out;
+    position: absolute;
+    z-index: 1;
+   
 }
 .center{
     width: 600px;
@@ -33,16 +37,26 @@ button:hover{
     color: blueviolet;
     
 }
+
 .sec{
     color: blue
 }
 
-h1{
+.heading{
     margin-top: -50px;
     text-align: center;
+    font-family:  cursive;;
     
     /* border-bottom: 1px solid black; */
 }
 .line{
     width: 500px;
+}
+.hide{
+    
+    display: none;
+    
+}
+.heading1{
+    text-align: center;
 }
