--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
     justify-content: center;
     transition: 4s ease-in-out;
     position: absolute;
-    z-index: 1;
+    z-index: 3;
    
 }
 .center{
@@ -71,6 +71,8 @@ button:hover{
     display:flex;
     align-items: center;
     justify-content: center;
+    position: absolute;
+    z-index: 1;
 }
 .para{
     width: 600px;
@@ -121,4 +123,29 @@ p{
 .w2{
    margin-top: 20px;
    width: 500px;
+}
+.main2{
+    width: 1340px;
+    height: 640px;
+    background-color: blueviolet;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: absolute;
+    z-index: 2;
+}
+.btn3{
+    width: 150px;
+    height: 50px;
+    border-radius: 10px;
+    background-color: whitesmoke;
+    color: blueviolet;
+    cursor: pointer;
+    font-size: 20px;
+}
+.btn3:hover{
+     background-color: white;
+}
+.hide1{
+    display: none;
 }
